# Rozgar-backend

./: README.md
rozgar_bot_agent/: pyproject.toml  requirements.txt
rozgar_bot_agent/agent/: agent_server.py  rozgar_bot.py
